Fixed layout problems (still need auto scroll directive)

--- a/src/app/components/feed/feed.component.scss
+++ b/src/app/components/feed/feed.component.scss
@@ -1,8 +1,10 @@
 // @import '../../styles/globals.scss';
 // @import '../../styles/colours.scss';
-
-// .feed {
 // 	border: 1px solid $border-color;
 // 	border-left-width: 12px;
 // 	padding: 1em;
 // }
+
+.box {
+	flex-grow: 1;
+}
