--- a/src/app/pages/funnel/landing/landing.component.scss
+++ b/src/app/pages/funnel/landing/landing.component.scss
@@ -1,13 +1,23 @@
 @import '../../../styles/globals.scss';
 @import '../../../styles/colours.scss';
 
+.feed {
+	overflow: scroll;
+	flex-grow: 1;
+	display: flex;
+    flex-direction: column;
+}
+
 .landing-page {
 	width: 38em;
 	margin-left: auto;
 	margin-right: auto;
 
-	max-height: calc(100%);
-	overflow: scroll;
+	max-height: calc(100% - 20px);
+	min-height: calc(100% - 20px);
+
+	display: flex;
+	flex-direction: column;
 }
 
 .log-in {
